비밀번호 변경 기능 수정

--- a/src/main/java/cse/sms/view/Login_Page.form
+++ b/src/main/java/cse/sms/view/Login_Page.form
@@ -88,10 +88,6 @@
                       <EmptySpace min="-2" pref="168" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="PW_CHANGE" min="-2" max="-2" attributes="0"/>
-                  </Group>
               </Group>
               <EmptySpace pref="137" max="32767" attributes="0"/>
           </Group>
@@ -116,9 +112,7 @@
               <Component id="SHOW_PW" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
               <Component id="LOGIN_BUTT" min="-2" pref="42" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="PW_CHANGE" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace pref="35" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -172,14 +166,6 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SHOW_PWActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="PW_CHANGE">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="&#xbe44;&#xbc00;&#xbc88;&#xd638; &#xbcc0;&#xacbd;"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PW_CHANGEActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
